bug fixes and new functionality on way to 0.1 launch